plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.eskcti.algashop'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	mockitoAgent
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
	implementation 'commons-validator:commons-validator:1.9.0'
	implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
  implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.modelmapper:modelmapper:3.2.4'
	runtimeOnly 'com.h2database:h2'
  compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.27.3'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
	mockitoAgent('org.mockito:mockito-core:5.14.2') {transitive = false}
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

tasks.withType(Test).configureEach {
	jvmArgs '-Djdk.attach.allowAttachSelf=true', '-XX:+EnableDynamicAgentLoading'
}

test {
	filter {
		excludeTestsMatching("*IT")
	}
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.named('check') {
	dependsOn(test, integrationTest)
}

tasks.register('integrationTest', Test) {
  description = 'Run integration tests.'
  group = 'verification'
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"

  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath

  shouldRunAfter test

  useJUnitPlatform()

  testLogging {
    events "passed"
  }

  filter {
    includeTestsMatching "*IT"
    excludeTestsMatching "*Test"
  }

  finalizedBy jacocoTestReport
}

def jacocoCoverageExcludes = [
	'**/OrderingApplication.class',
	'**/DomainServiceScanConfig.class',
	'**/SpringDataAuditingConfig.class',
	'**/RapiDexAPIClientConfig.class',
	'**/ModelMapperConfig.class'
]

jacocoTestReport {
	dependsOn test, integrationTest
	executionData(test, integrationTest)
	reports {
		xml.required = true
		html.required = true
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: jacocoCoverageExcludes)
		}))
	}
}

jacocoTestCoverageVerification {
	dependsOn jacocoTestReport
	executionData(test, integrationTest)
	violationRules {
		rule {
			limit {
				minimum = 1.0
			}
		}
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: jacocoCoverageExcludes)
		}))
	}
}

check.dependsOn jacocoTestCoverageVerification
